# sorting_network_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.githooks/: pre-push
.github/workflows/: cmake-multi-platform.yml
cmake/: CPM.cmake  Conan.cmake
doc/: benchmark_timings.csv  data_explorer.htm
hooks/: post-commit  pre-push.py
include/sorting_network_cpp/: sorting_network.h  sorting_network_impl.h
include/sorting_network_cpp/networks/: all.h  batcher_odd_even_merge_sort.h  bitonic_merge_sort.h  bose_nelson_sort.h  bubble_sort.h  common.h  insertion_sort.h  size_optimized_sort.h
scripts/: make_single_header_impl.py
single_header_impl/: sorting_network_cpp.h
src/: benchmark.cpp  benchmark_double.cpp  benchmark_float.cpp  benchmark_int16.cpp  benchmark_int32.cpp  benchmark_int64.cpp  benchmark_main.cpp  benchmark_uint32.cpp  benchmark_vec2i.cpp  util.h
test/: sorting_network_tests.cpp  test_base.h  test_batcher_odd_even_merge_sort.cpp  test_bitonic_merge_sort.cpp  test_bose_nelson_sort.cpp  test_bubble_sort.cpp  test_case_gen.h  test_insertion_sort.cpp  test_size_optimized_sort.cpp
